--- a/netlify.toml
+++ b/netlify.toml
@@ -1,18 +1,13 @@
 [build]
-  command = "npm run build"
+  command = "npm ci && npm run build"
   publish = ".next"
 
 [[plugins]]
   package = "@netlify/plugin-nextjs"
 
 [build.environment]
-  NODE_VERSION = "20"
-
-# Redirects for SPA
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+  NODE_VERSION = "20.18.0"
+  NPM_VERSION = "10.8.2"
 
 # Headers for security and performance
 [[headers]]
